--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ dependencies = [
     "langchain>=0.3.3",
     "fastapi>=0.115.2",
     "langserve[all]>=0.3.0",
+    "autogen-agentchat~=0.2",
+    "ipython>=8.28.0",
+    "chromadb>=0.5.15",
+    "dspy-ai>=2.5.13",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
